# a2a-rag-agent

./: .env  .env.sample  .pylintrc  README.md  main.py  pyproject.toml  start_a2a_server.py  streamlit_ui.py  test.json  test_client.py  test_graph.py  test_rag.py  test_streaming.py
app/: __main__.py  agent.py  rag_agent.py  test_client.py
app/genai/: initialize.py
app/genai/models/: __init__.py
app/llm/: llm_provider.py  llm_settings.py
app/llm/ollama/: __init__.py
app/utils/: exceptions.py  singleton_meta.py
config/: greetings.yaml  models.yaml  prompts.yaml
data/: report.txt
old_files/: README.md  main.py
old_files/config/: agent.yaml  models.yaml  prompts.yaml
old_files/src/a2a_rag_agent/genai/: initialize.py
old_files/src/a2a_rag_agent/llm/: llm_backend.py  llm_settings.py
src/a2a_rag_agent/: agent_executor.py  rag_agent.py  simple_client.py  test_client.py
src/a2a_rag_agent/genai/: initialize.py
src/a2a_rag_agent/genai/models/: __init__.py  prompt_data.py
src/a2a_rag_agent/graph/: agentic_rag_graph.py
src/a2a_rag_agent/llm/: llm_backend.py  llm_provider.py  llm_settings.py
src/a2a_rag_agent/llm/ollama/: __init__.py  settings.py
src/a2a_rag_agent/llm/provider_settings/: __init__.py  ollama_settings.py
src/a2a_rag_agent/utils/: exceptions.py  fast_api_parsing.py  langgraph_streaming.py  singleton_meta.py  timing.py
src/a2a_rag_agent/utils/settings/: __init__.py  agent_settings.py  ollama_settings.py  provider_settings.py
