[project]
name = "a2a-rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.6",
    "langchain-ollama>=0.3.8",
    "langgraph>=0.6.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ['src/a2a_rag_agent']

[tool.hatch.version]
path = "src/a2a_rag_agent/__init__.py"
