[project]
name = "a2a-rag-agent"
version = "0.1.0"
description = "A2A RAG Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.0",
    "langchain-ollama>=0.3.8",
    "langchain-text-splitters>=0.3.11",
    "a2a-sdk>=0.3.0",
    "uvicorn>=0.37.0",
    "langgraph>=0.6.8",
    "langchain>=0.3.27",
    "pydantic-settings>=2.11.0",
    "streamlit>=1.50.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ['src/a2a_rag_agent']
